[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Timer.gd" type="Script" id=1]
[ext_resource path="res://scripts/UniverseTime.cs" type="Script" id=3]

[node name="time" type="Node"]
script = ExtResource( 3 )

[node name="timer" type="Timer" parent="."]
autostart = true
script = ExtResource( 1 )

[node name="time_menu" type="Control" parent="timer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_panel" type="Panel" parent="timer/time_menu"]
margin_right = 265.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="GridContainer" parent="timer/time_menu/time_panel"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="date_container" type="HBoxContainer" parent="timer/time_menu/time_panel/grid"]
margin_right = 230.0
margin_bottom = 14.0

[node name="label" type="Label" parent="timer/time_menu/time_panel/grid/date_container"]
margin_right = 34.0
margin_bottom = 14.0
text = "Date:"

[node name="text" type="Label" parent="timer/time_menu/time_panel/grid/date_container"]
margin_left = 38.0
margin_right = 170.0
margin_bottom = 14.0
text = "01:01:2030 20:00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timewarp_container" type="HBoxContainer" parent="timer/time_menu/time_panel/grid"]
margin_top = 18.0
margin_right = 230.0
margin_bottom = 38.0

[node name="label" type="Label" parent="timer/time_menu/time_panel/grid/timewarp_container"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 17.0
text = "Timewarp:"

[node name="timewarp" type="Label" parent="timer/time_menu/time_panel/grid/timewarp_container"]
margin_left = 70.0
margin_top = 3.0
margin_right = 117.0
margin_bottom = 17.0
text = "Normal"

[node name="slower_button" type="Button" parent="timer/time_menu/time_panel/grid/timewarp_container"]
margin_left = 121.0
margin_right = 175.0
margin_bottom = 20.0
text = "Slower"

[node name="faster_button" type="Button" parent="timer/time_menu/time_panel/grid/timewarp_container"]
margin_left = 179.0
margin_right = 230.0
margin_bottom = 20.0
text = "Faster"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="timer" to="timer" method="_on_Timer_timeout"]
[connection signal="timewarp_timeout" from="timer" to="." method="_on_Timer_timewarp_timeout"]
[connection signal="pressed" from="timer/time_menu/time_panel/grid/timewarp_container/slower_button" to="timer" method="_on_slower_button_pressed"]
[connection signal="pressed" from="timer/time_menu/time_panel/grid/timewarp_container/faster_button" to="timer" method="_on_faster_button_pressed"]
